--- a/src/styles.css
+++ b/src/styles.css
@@ -544,7 +544,7 @@ body {
 
     .sidebar {
         position: fixed;
-        top: 60px;
+        /* top: 60px; */
         left: 0;
         width: 100%;
         height: calc(100vh - 60px - 70px);
